@@ -9,6 +9,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.isNull;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.doThrow;
@@ -40,6 +41,7 @@ import java.util.Set;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Future;
+import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -77,6 +79,8 @@ import org.sagebionetworks.repo.model.dbo.file.download.v2.ActionsRequiredDao;
 import org.sagebionetworks.repo.model.dbo.file.download.v2.EntityActionRequiredCallback;
 import org.sagebionetworks.repo.model.dbo.file.download.v2.FilesBatchProvider;
 import org.sagebionetworks.repo.model.entity.IdAndVersion;
+import org.sagebionetworks.repo.model.table.BenefactorColumn;
+import org.sagebionetworks.repo.model.table.ColumnLineageEntry;
 import org.sagebionetworks.repo.model.table.ColumnModel;
 import org.sagebionetworks.repo.model.table.ColumnMultiValueFunction;
 import org.sagebionetworks.repo.model.table.ColumnMultiValueFunctionQueryFilter;
@@ -92,6 +96,8 @@ import org.sagebionetworks.repo.model.table.FacetColumnResultBinnedValues;
 import org.sagebionetworks.repo.model.table.FacetColumnResultRange;
 import org.sagebionetworks.repo.model.table.FacetColumnResultValues;
 import org.sagebionetworks.repo.model.table.FacetType;
+import org.sagebionetworks.repo.model.table.IndexAuthorizationSnapshot;
+import org.sagebionetworks.repo.model.table.IndexDescriptionSnapshot;
 import org.sagebionetworks.repo.model.table.Query;
 import org.sagebionetworks.repo.model.table.QueryBundleRequest;
 import org.sagebionetworks.repo.model.table.QueryOptions;
@@ -102,6 +108,7 @@ import org.sagebionetworks.repo.model.table.RowSet;
 import org.sagebionetworks.repo.model.table.SelectColumn;
 import org.sagebionetworks.repo.model.table.SortDirection;
 import org.sagebionetworks.repo.model.table.SortItem;
+import org.sagebionetworks.repo.model.table.SourceDependency;
 import org.sagebionetworks.repo.model.table.SumFileSizes;
 import org.sagebionetworks.repo.model.table.TableConstants;
 import org.sagebionetworks.repo.model.table.TableFailedException;
@@ -120,6 +127,8 @@ import org.sagebionetworks.table.cluster.TableIndexDAO;
 import org.sagebionetworks.table.cluster.description.BenefactorDescription;
 import org.sagebionetworks.table.cluster.description.IndexDescription;
 import org.sagebionetworks.table.cluster.description.MaterializedViewIndexDescription;
+import org.sagebionetworks.table.cluster.description.QueryIndexDescription;
+import org.sagebionetworks.table.cluster.description.SnapshotIndexDescription;
 import org.sagebionetworks.table.cluster.description.TableIndexDescription;
 import org.sagebionetworks.table.cluster.description.ViewIndexDescription;
 import org.sagebionetworks.table.cluster.description.VirtualTableIndexDescription;
@@ -169,7 +178,9 @@ public class TableQueryManagerImplTest {
 	private RowHandler mockRowHandler;
 	@Mock
 	private QueryTranslations mockQueryTranslations;
-	
+	@Mock
+	private IndexAuthorizationSnapshotManager mockIndexAuthorizationSnapshotManager;
+
 	@Spy
 	@InjectMocks
 	private TableQueryManagerImpl manager;
@@ -350,9 +361,49 @@ public class TableQueryManagerImplTest {
 		this.rows = newRows;
 	}
 
+	/**
+	 * Stub the authorization snapshot for an object so preflight resolves its as-built
+	 * {@link SnapshotIndexDescription} and schema (the pinned output-column id set) instead of
+	 * current-truth state. Mirrors the passing {@code testQueryPreflightWithSnapshot}.
+	 */
+	IndexAuthorizationSnapshot setupSnapshot(IdAndVersion id, TableType tableType, List<ColumnModel> schema,
+			List<BenefactorColumn> benefactors, List<SourceDependency> dependencies) {
+		List<ColumnLineageEntry> lineage = schema.stream()
+				.map(cm -> new ColumnLineageEntry().setOutputColumnId(cm.getId())).collect(Collectors.toList());
+		IndexAuthorizationSnapshot snapshot = new IndexAuthorizationSnapshot()
+				.setIndexDescription(new IndexDescriptionSnapshot()
+						.setObjectId("syn" + id.getId())
+						.setVersionNumber(id.getVersion().orElse(null))
+						.setTableType(tableType.name())
+						.setBenefactors(benefactors)
+						.setDependencies(dependencies))
+				.setColumnLineage(lineage);
+		when(mockIndexAuthorizationSnapshotManager.getAuthorizationSnapshot(id)).thenReturn(Optional.of(snapshot));
+		return snapshot;
+	}
+
+	/**
+	 * Convenience for a plain table (no benefactors, no dependencies).
+	 */
+	IndexAuthorizationSnapshot setupSnapshot(IdAndVersion id, TableType tableType, List<ColumnModel> schema) {
+		return setupSnapshot(id, tableType, schema, Collections.emptyList(), Collections.emptyList());
+	}
+
+	/**
+	 * Resolve each output-column id back to its {@link ColumnModel}, exactly as
+	 * {@code SnapshotSchemaProvider} does when reconstituting the as-built schema.
+	 */
+	void setupColumnModelAnswer(List<ColumnModel> schema) {
+		when(mockTableManagerSupport.getColumnModel(any())).thenAnswer(invocation -> {
+			String id = invocation.getArgument(0);
+			return schema.stream().filter(m -> m.getId().equals(id)).findFirst().orElse(null);
+		});
+	}
+
 	@Test
 	public void testQueryPreflightUnauthroized() throws Exception {
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(new TableIndexDescription(idAndVersion));
+		// authorization is denied against the as-built snapshot, before any schema read
+		setupSnapshot(idAndVersion, TableType.table, Collections.emptyList());
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any()))
 				.thenReturn(AuthorizationStatus.accessDenied("no access"));
 		Query query = new Query();
@@ -364,32 +415,27 @@ public class TableQueryManagerImplTest {
 	
 	@Test
 	public void testQueryPreflightAuthorized() throws Exception {
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long)models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
-		IndexDescription indexDescription = new TableIndexDescription(idAndVersion);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
-		
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
-		
+
 		Query query = new Query();
 		query.setSql("select * from " + tableId);
 		manager.queryPreflight(user, query, null, queryOptions);
-		verify(mockTableManagerSupport).validateTableReadAccess(user, indexDescription);
+		QueryIndexDescription expected = new SnapshotIndexDescription(idAndVersion, TableType.table,
+				Collections.emptyList(), Collections.emptyList(), id -> Optional.empty());
+		verify(mockTableManagerSupport).validateTableReadAccess(user, expected);
 	}
 
 	@Test
 	public void testQueryPreflightWithAggregateAllowed() throws Exception {
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long)models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
-		IndexDescription indexDescription = new TableIndexDescription(idAndVersion);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
 		// row-level access is denied only because the source is bound to AGGREGATE_DATA
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any()))
 				.thenReturn(AuthorizationStatus.accessDeniedButAggregateAllowed("unmet access requirements", tableId));
 		AggregateDataConfiguration configuration = new AggregateDataConfiguration().setSuppressionThreshold(500L);
 		when(mockTableManagerSupport.getAggregateDataConfiguration(tableId)).thenReturn(Optional.of(configuration));
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
 
 		Query query = new Query();
 		query.setSql("select * from " + tableId);
@@ -404,7 +450,8 @@ public class TableQueryManagerImplTest {
 
 	@Test
 	public void testQueryPreflightWithAggregateDeniedNoConfig() throws Exception {
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(new TableIndexDescription(idAndVersion));
+		// denial resolved against the snapshot before any schema read
+		setupSnapshot(idAndVersion, TableType.table, Collections.emptyList());
 		// the status reports an aggregate source, but no bound configuration is found, so
 		// the standard denial must be preserved rather than silently allowing the query
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any()))
@@ -415,6 +462,81 @@ public class TableQueryManagerImplTest {
 		query.setSql("select * from " + tableId);
 
 		assertThrows(UnauthorizedException.class, () -> {
+			manager.queryPreflight(user, query, null, queryOptions);
+		});
+	}
+
+	@Test
+	public void testQueryPreflightWithSnapshot() throws Exception {
+		// The as-built snapshot pins the object's type and its output-column id set.
+		List<ColumnLineageEntry> lineage = new ArrayList<>();
+		for (ColumnModel cm : models) {
+			lineage.add(new ColumnLineageEntry().setOutputColumnId(cm.getId()));
+		}
+		when(mockTableManagerSupport.getColumnModel(any())).thenAnswer(invocation -> {
+			String id = invocation.getArgument(0);
+			return models.stream().filter(m -> m.getId().equals(id)).findFirst().orElse(null);
+		});
+		IndexAuthorizationSnapshot snapshot = new IndexAuthorizationSnapshot()
+				.setIndexDescription(new IndexDescriptionSnapshot().setObjectId(tableId)
+						.setTableType(TableType.table.name()).setBenefactors(Collections.emptyList())
+						.setDependencies(Collections.emptyList()))
+				.setColumnLineage(lineage);
+		when(mockIndexAuthorizationSnapshotManager.getAuthorizationSnapshot(idAndVersion))
+				.thenReturn(Optional.of(snapshot));
+		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
+
+		Query query = new Query();
+		query.setSql("select * from " + tableId);
+
+		// call under test
+		manager.queryPreflight(user, query, null, queryOptions);
+
+		// Authorization runs against the reconstituted snapshot description, not the live index description.
+		QueryIndexDescription expected = new SnapshotIndexDescription(idAndVersion, TableType.table,
+				Collections.emptyList(), Collections.emptyList(), id -> Optional.empty());
+		verify(mockTableManagerSupport).validateTableReadAccess(user, expected);
+		// The live index description and live schema count are never consulted on the snapshot path.
+		verify(mockTableManagerSupport, never()).getIndexDescription(any());
+		verify(mockTableManagerSupport, never()).getTableSchemaCount(any());
+	}
+
+	@Test
+	public void testQueryPreflightWithSnapshotUnauthorized() throws Exception {
+		IndexAuthorizationSnapshot snapshot = new IndexAuthorizationSnapshot()
+				.setIndexDescription(new IndexDescriptionSnapshot().setObjectId(tableId)
+						.setTableType(TableType.table.name()).setBenefactors(Collections.emptyList())
+						.setDependencies(Collections.emptyList()))
+				.setColumnLineage(Collections.singletonList(
+						new ColumnLineageEntry().setOutputColumnId(models.get(0).getId())));
+		when(mockIndexAuthorizationSnapshotManager.getAuthorizationSnapshot(idAndVersion))
+				.thenReturn(Optional.of(snapshot));
+		when(mockTableManagerSupport.validateTableReadAccess(any(), any()))
+				.thenReturn(AuthorizationStatus.accessDenied("no access"));
+
+		Query query = new Query();
+		query.setSql("select * from " + tableId);
+
+		assertThrows(UnauthorizedException.class, () -> {
+			// call under test
+			manager.queryPreflight(user, query, null, queryOptions);
+		});
+		verify(mockTableManagerSupport, never()).getIndexDescription(any());
+	}
+
+	@Test
+	public void testQueryPreflightWithoutSnapshotAndNotVirtualTableThrows() throws Exception {
+		// A materialized object confirmed AVAILABLE under the read lock must have an as-built snapshot;
+		// its absence for a non-VirtualTable is an invariant violation, not a live fallback.
+		when(mockIndexAuthorizationSnapshotManager.getAuthorizationSnapshot(idAndVersion))
+				.thenReturn(Optional.empty());
+		when(mockTableManagerSupport.getTableType(idAndVersion)).thenReturn(TableType.table);
+
+		Query query = new Query();
+		query.setSql("select * from " + tableId);
+
+		// call under test
+		assertThrows(IllegalStateException.class, () -> {
 			manager.queryPreflight(user, query, null, queryOptions);
 		});
 	}
@@ -534,154 +656,150 @@ public class TableQueryManagerImplTest {
 	public void testQueryAfterAuthorization() throws Exception{
 		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
 		setupNonExclusiveLock();
-		when(mockTableConnectionFactory.getConnection(idAndVersion)).thenReturn(mockTableIndexDAO);
-		when(mockSchemaProvider.getTableSchema(any())).thenReturn(models);
-		when(mockSchemaProvider.getColumnModel(any())).thenReturn(models.get(0));
-		when(mockQueryExecutor.executeQuery(any(), any())).thenReturn(rowSet);
-		
-		QueryTranslations query = new QueryTranslations(queriesBuilder.setStartingSql("select * from " + tableId).build(), queryOptions);
+
+		Query query = new Query();
+		query.setSql("select * from " + tableId);
+		Long maxBytesPerPage = null;
+		// Only the SQL is parsed before the lock; authorization and translation are deferred into the
+		// locked callback. Stub preflight so this test focuses on the lock/availability orchestration.
+		doReturn(mockQueryTranslations).when(manager).queryPreflight(user, query, maxBytesPerPage, queryOptions);
+		QueryResultBundle expected = new QueryResultBundle();
+
 		// call under test.
-		QueryResultBundle result = manager.queryAfterAuthorization(mockProgressCallbackVoid, user, query, queryOptions, mockQueryExecutor);
-		assertNotNull(result);
-		assertNotNull(result.getQueryResult());
-		assertNotNull(result.getQueryResult().getQueryResults());
-		assertEquals(status.getLastTableChangeEtag(), result.getQueryResult().getQueryResults().getEtag());
-		// an exclusive lock must be held for a consistent query.
+		QueryResultBundle result = manager.queryAfterAuthorization(mockProgressCallbackVoid, user, query, maxBytesPerPage,
+				queryOptions, (translatedQuery, tableStatus) -> {
+					// the consumer receives the query translated under the lock and the status from the availability check.
+					assertEquals(mockQueryTranslations, translatedQuery);
+					assertEquals(status, tableStatus);
+					return expected;
+				});
+		assertEquals(expected, result);
+		// the read lock must be held while the query is authorized, translated, and run.
 		verify(mockTableManagerSupport).tryRunWithTableNonExclusiveLock(any(ProgressCallback.class), any(), any(ProgressingCallable.class), any(IdAndVersion.class));
-		// The table status should be checked only for a consistent query.
+		// availability is confirmed once, under the lock, before translation.
 		verify(mockTableManagerSupport).getTableStatusOrCreateIfNotExists(idAndVersion);
+		verify(manager).queryPreflight(user, query, maxBytesPerPage, queryOptions);
 	}
-	
+
 	@Test
 	public void testQueryAfterAuthorizationNotFoundException() throws Exception{
 		when(mockTableManagerSupport.tryRunWithTableNonExclusiveLock(
 						any(ProgressCallback.class), any(), any(ProgressingCallable.class),
 						any(IdAndVersion.class))).thenThrow(
 				new NotFoundException("not found"));
-		when(mockSchemaProvider.getTableSchema(any())).thenReturn(models);
-		
-		when(mockSchemaProvider.getColumnModel(any())).thenReturn(models.get(0));
-		
-		QueryTranslations query = new QueryTranslations(queriesBuilder.setStartingSql("select * from " + tableId).build(), queryOptions);
+
+		Query query = new Query();
+		query.setSql("select * from " + tableId);
 		assertThrows(NotFoundException.class, ()->{
 			// call under test.
-			manager.queryAfterAuthorization(mockProgressCallbackVoid, user, query, queryOptions, null);
+			manager.queryAfterAuthorization(mockProgressCallbackVoid, user, query, null, queryOptions, (q, s) -> null);
 		});
 	}
-	
+
 	@Test
 	public void testQueryAfterAuthorizationTableUnavailableException() throws Exception{
 		when(mockTableManagerSupport.tryRunWithTableNonExclusiveLock(
 						any(ProgressCallback.class), any(), any(ProgressingCallable.class),
 						any(IdAndVersion.class))).thenThrow(
 				new TableUnavailableException(new TableStatus()));
-		
-		when(mockSchemaProvider.getTableSchema(any())).thenReturn(models);
-		
-		when(mockSchemaProvider.getColumnModel(any())).thenReturn(models.get(0));
-		
-		QueryTranslations query = new QueryTranslations(queriesBuilder.setStartingSql("select * from " + tableId).build(), queryOptions);
+
+		Query query = new Query();
+		query.setSql("select * from " + tableId);
 		assertThrows(TableUnavailableException.class, ()->{
 			// call under test.
-			manager.queryAfterAuthorization(mockProgressCallbackVoid, user, query, queryOptions, null);
+			manager.queryAfterAuthorization(mockProgressCallbackVoid, user, query, null, queryOptions, (q, s) -> null);
 		});
 	}
-	
+
 	@Test
 	public void testQueryAfterAuthorizationTableFailedException() throws Exception{
 		when(mockTableManagerSupport.tryRunWithTableNonExclusiveLock(
 						any(ProgressCallback.class), any(), any(ProgressingCallable.class),
 						any(IdAndVersion.class))).thenThrow(
 				new TableFailedException(new TableStatus()));
-		
-		when(mockSchemaProvider.getTableSchema(any())).thenReturn(models);
-		
-		when(mockSchemaProvider.getColumnModel(any())).thenReturn(models.get(0));
-		
-		QueryTranslations query = new QueryTranslations(queriesBuilder.setStartingSql("select * from " + tableId).build(), queryOptions);
+
+		Query query = new Query();
+		query.setSql("select * from " + tableId);
 		assertThrows(TableFailedException.class, ()->{
 			// call under test.
-			manager.queryAfterAuthorization(mockProgressCallbackVoid, user, query, queryOptions, null);
+			manager.queryAfterAuthorization(mockProgressCallbackVoid, user, query, null, queryOptions, (q, s) -> null);
 		});
 	}
-	
+
 	@Test
 	public void testQueryAfterAuthorizationLockUnavilableException() throws Exception{
 		when(mockTableManagerSupport.tryRunWithTableNonExclusiveLock(
 						any(ProgressCallback.class), any(), any(ProgressingCallable.class),
 						any(IdAndVersion.class))).thenThrow(
 				new LockUnavilableException(LockType.Read, "key", "context"));
-		when(mockSchemaProvider.getTableSchema(any())).thenReturn(models);
-		
-		when(mockSchemaProvider.getColumnModel(any())).thenReturn(models.get(0));
-		
-		QueryTranslations query = new QueryTranslations(queriesBuilder.setStartingSql("select * from " + tableId).build(), queryOptions);
+
+		Query query = new Query();
+		query.setSql("select * from " + tableId);
 		assertThrows(LockUnavilableException.class, ()->{
 			// call under test.
-			manager.queryAfterAuthorization(mockProgressCallbackVoid, user, query, queryOptions, null);
+			manager.queryAfterAuthorization(mockProgressCallbackVoid, user, query, null, queryOptions, (q, s) -> null);
 		});
 
 	}
-	
+
 	@Test
 	public void testQueryAfterAuthorizationEmptyResultException() throws Exception{
 		when(mockTableManagerSupport.tryRunWithTableNonExclusiveLock(
 						any(ProgressCallback.class), any(), any(ProgressingCallable.class),
 						any(IdAndVersion.class))).thenThrow(
 				new EmptyResultException());
-		when(mockSchemaProvider.getTableSchema(any())).thenReturn(models);
-		
-		when(mockSchemaProvider.getColumnModel(any())).thenReturn(models.get(0));
-		
-		QueryTranslations query = new QueryTranslations(queriesBuilder.setStartingSql("select * from " + tableId).build(), queryOptions);
+
+		Query query = new Query();
+		query.setSql("select * from " + tableId);
 		assertThrows(EmptyResultException.class, ()->{
 			// call under test.
-			manager.queryAfterAuthorization(mockProgressCallbackVoid, user, query, queryOptions, null);
+			manager.queryAfterAuthorization(mockProgressCallbackVoid, user, query, null, queryOptions, (q, s) -> null);
 		});
 	}
 	
 	@Test
 	public void testQueryPreflightWithAuthorizationTableEntity() throws Exception{
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long)models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
-		IndexDescription indexDescription = new TableIndexDescription(idAndVersion);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
-		
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
-		
+
 		Query query = new Query();
 		query.setSql("select i0 from "+tableId);
 		Long maxBytesPerPage = null;
 		manager.queryPreflight(user, query, maxBytesPerPage, queryOptions);
-		
+
+		QueryIndexDescription expected = new SnapshotIndexDescription(idAndVersion, TableType.table,
+				Collections.emptyList(), Collections.emptyList(), id -> Optional.empty());
 		// auth check should occur
-		verify(mockTableManagerSupport).validateTableReadAccess(user, indexDescription);
+		verify(mockTableManagerSupport).validateTableReadAccess(user, expected);
 		// a benefactor check should not occur for TableEntities
 		verify(mockTableManagerSupport, never()).getAccessibleBenefactors(any(), any(), any());
 	}
 	
 	@Test
 	public void testQueryPreflightWithAuthorizationFileView() throws Exception{
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long)models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
+		setupSnapshot(idAndVersion, TableType.entityview, models,
+				List.of(new BenefactorColumn().setBenefactorColumnName(TableConstants.ROW_BENEFACTOR)
+						.setBenefactorType(ObjectType.ENTITY.name())),
+				Collections.emptyList());
+		setupColumnModelAnswer(models);
 		when(mockTableConnectionFactory.getConnection(idAndVersion)).thenReturn(mockTableIndexDAO);
-		
-		IndexDescription indexDescription = new ViewIndexDescription(idAndVersion, TableType.entityview, -1L);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
-		
+
 		when(mockTableIndexDAO.getDistinctLongValues(any(), any())).thenReturn(benfactors);
 		when(mockTableManagerSupport.getAccessibleBenefactors(any(), any(), any())).thenReturn(subSet);
-		
+
 		Query query = new Query();
 		query.setSql("select count(*) from "+tableId);
 		Long maxBytesPerPage = null;
 		// call under test
 		QueryTranslations results = manager.queryPreflight(user, query, maxBytesPerPage, queryOptions);
 		assertNotNull(results);
+		QueryIndexDescription expected = new SnapshotIndexDescription(idAndVersion, TableType.entityview,
+				List.of(new BenefactorDescription(TableConstants.ROW_BENEFACTOR, ObjectType.ENTITY)),
+				Collections.emptyList(), id -> Optional.empty());
 		// auth check should occur
-		verify(mockTableManagerSupport).validateTableReadAccess(user, indexDescription);
+		verify(mockTableManagerSupport).validateTableReadAccess(user, expected);
 		// a benefactor check must occur for FileViews
 		verify(mockTableManagerSupport).getAccessibleBenefactors(any(), any(), any());
 		// validate the benefactor filter is applied
@@ -693,39 +811,44 @@ public class TableQueryManagerImplTest {
 	
 	@Test
 	public void testQueryPreflightWithAuthorizationVirtualTable() throws Exception{
-	
-		// view setup
+
+		// source view syn1 is authorized against its as-built snapshot (entityview with a benefactor)
 		IdAndVersion viewId = IdAndVersion.parse("syn1");
-		IndexDescription viewIndexDescription = new ViewIndexDescription(viewId, TableType.entityview, -1L);
-		when(mockTableManagerSupport.getIndexDescription(viewId)).thenReturn(viewIndexDescription);
-		List<ColumnModel> viewSchema = List.of(new ColumnModel().setName("foo").setColumnType(ColumnType.INTEGER).setId("11"));
-		when(mockTableManagerSupport.getTableSchema(viewId)).thenReturn(viewSchema);
+		ColumnModel fooColumn = new ColumnModel().setName("foo").setColumnType(ColumnType.INTEGER).setId("11");
+		List<ColumnModel> viewSchema = List.of(fooColumn);
+		setupSnapshot(viewId, TableType.entityview, viewSchema,
+				List.of(new BenefactorColumn().setBenefactorColumnName(TableConstants.ROW_BENEFACTOR)
+						.setBenefactorType(ObjectType.ENTITY.name())),
+				Collections.emptyList());
 		when(mockTableConnectionFactory.getConnection(viewId)).thenReturn(mockTableIndexDAO);
 		when(mockTableIndexDAO.getDistinctLongValues(any(), any())).thenReturn(benfactors);
 		when(mockTableManagerSupport.getAccessibleBenefactors(any(), any(), any())).thenReturn(subSet);
-		
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
-		
-		// virtual table setup
+
+		// virtual table syn2 has no snapshot; it is inlined as a query over its source view syn1
 		IdAndVersion virtualTableId = IdAndVersion.parse("syn2");
-		String definingSql = "select * from syn1";
-		IndexDescription virtualTableIndexDescription = new VirtualTableIndexDescription(virtualTableId, definingSql, mockTableManagerSupport);
-		when(mockTableManagerSupport.getIndexDescription(virtualTableId)).thenReturn(virtualTableIndexDescription);
-		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
-		List<ColumnModel> virtualSchema = List.of(new ColumnModel().setName("bar").setColumnType(ColumnType.INTEGER).setId("22"));
-		when(mockTableManagerSupport.getTableSchemaCount(virtualTableId)).thenReturn((long)virtualSchema.size());
+		ColumnModel barColumn = new ColumnModel().setName("bar").setColumnType(ColumnType.INTEGER).setId("22");
+		List<ColumnModel> virtualSchema = List.of(barColumn);
+		when(mockIndexAuthorizationSnapshotManager.getAuthorizationSnapshot(virtualTableId)).thenReturn(Optional.empty());
+		when(mockTableManagerSupport.getTableType(virtualTableId)).thenReturn(TableType.virtualtable);
+		when(mockTableManagerSupport.getDefiningSql(virtualTableId)).thenReturn(Optional.of("select * from syn1"));
 		when(mockTableManagerSupport.getTableSchema(virtualTableId)).thenReturn(virtualSchema);
-		
+		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
+
+		setupColumnModelAnswer(List.of(fooColumn, barColumn));
+
 		Query query = new Query();
 		query.setSql("select count(*) from syn2");
 		Long maxBytesPerPage = null;
 		// call under test
 		QueryTranslations results = manager.queryPreflight(user, query, maxBytesPerPage, queryOptions);
-		
+
 		assertNotNull(results);
-		verify(mockTableManagerSupport, times(1)).validateTableReadAccess(any(), any());
-		verify(mockTableManagerSupport).validateTableReadAccess(user, virtualTableIndexDescription);
-		
+		// authorization runs once, against the virtual table whose only dependency is the snapshot-backed source view
+		ArgumentCaptor<QueryIndexDescription> captor = ArgumentCaptor.forClass(QueryIndexDescription.class);
+		verify(mockTableManagerSupport, times(1)).validateTableReadAccess(eq(user), captor.capture());
+		assertEquals(virtualTableId, captor.getValue().getIdAndVersion());
+		assertEquals(viewId, captor.getValue().getDependencies().get(0).getIdAndVersion());
+
 		// validate the benefactor filter is applied
 		assertEquals("WITH T2 (_C22_) AS "
 				+ "(SELECT _C11_ FROM T1 WHERE ROW_BENEFACTOR IN ( -:b0, :b1 ))"
@@ -942,14 +1065,24 @@ public class TableQueryManagerImplTest {
 		when(mockQueryCacheManager.getQueryResults(any(), any())).thenReturn(countRowSet);
 
 		queryOptions = new QueryOptions().withRunQuery(true);
-		QueryTranslations query = new QueryTranslations(queriesBuilder.setStartingSql("select * from " + tableId)
+		QueryTranslations translated = new QueryTranslations(queriesBuilder.setStartingSql("select * from " + tableId)
 				.setAggregateDataConfiguration(new AggregateDataConfiguration().setSuppressionThreshold(100L)).build(), queryOptions);
 
+		Query query = new Query();
+		query.setSql("select * from " + tableId);
+		Long maxBytesPerPage = null;
+		doReturn(translated).when(manager).queryPreflight(user, query, maxBytesPerPage, queryOptions);
+
 		// call under test
-		QueryResultBundle result = manager.queryAfterAuthorization(mockProgressCallbackVoid, user, query, queryOptions, mockQueryExecutor);
+		QueryResultBundle result = manager.queryAfterAuthorization(mockProgressCallbackVoid, user, query, maxBytesPerPage,
+				queryOptions, (translatedQuery, tableStatus) -> {
+					QueryResultBundle bundle = manager.executeQuery(user, translatedQuery, queryOptions, mockQueryExecutor);
+					// rows are suppressed for an aggregate-only query, so the etag block must be null-guarded and not NPE.
+					manager.setConsistentQueryEtag(bundle, queryOptions, tableStatus);
+					return bundle;
+				});
 		assertNotNull(result);
-		// rows are suppressed, so there is no query result to stamp the etag onto (the etag
-		// block must be null-guarded and not NPE)
+		// rows are suppressed, so there is no query result to stamp the etag onto
 		assertNull(result.getQueryResult());
 		assertEquals(count, result.getQueryCount());
 	}
@@ -1287,8 +1420,10 @@ public class TableQueryManagerImplTest {
 
 	@Test 
 	public void testQuerySinglePageEmptySchema() throws Exception {
-		// Return no columns
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn(0L);
+		// An as-built snapshot with no columns yields an empty schema.
+		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
+		setupNonExclusiveLock();
+		setupSnapshot(idAndVersion, TableType.table, Collections.emptyList());
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
 		Query query = new Query();
 		query.setSql("select * from " + tableId + " limit 1");
@@ -1307,14 +1442,7 @@ public class TableQueryManagerImplTest {
 	public void testQueryIndexNotAvailable() throws Exception {
 		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
 		setupNonExclusiveLock();
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long)models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
-		IndexDescription indexDescription = new TableIndexDescription(idAndVersion);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
-		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
-		
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
-		
+
 		status.setState(TableState.PROCESSING);
 		Query query = new Query();
 		query.setSql("select * from " + tableId + " limit 1");
@@ -1325,7 +1453,9 @@ public class TableQueryManagerImplTest {
 		});
 		assertEquals(status, result.getStatus());
 		verify(mockTableManagerSupport, times(1)).getTableStatusOrCreateIfNotExists(idAndVersion);
-		verify(mockTableManagerSupport).validateTableReadAccess(user, indexDescription);
+		// Availability is now confirmed under the read lock BEFORE authorization or translation, so an
+		// unavailable table is rejected without ever authorizing the user.
+		verify(mockTableManagerSupport, never()).validateTableReadAccess(any(), any());
 	}
 	
 	
@@ -1334,13 +1464,10 @@ public class TableQueryManagerImplTest {
 			throws Exception {
 		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
 		setupNonExclusiveLock();
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long)models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
 		when(mockTableConnectionFactory.getConnection(idAndVersion)).thenReturn(mockTableIndexDAO);
-		IndexDescription indexDescription = new TableIndexDescription(idAndVersion);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);		
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
 		when(mockTableIndexDAO.query(any())).thenReturn(new RowSet().setRows(rows));
 		
 		List<SelectColumn> selectColumns = TableModelUtils.getSelectColumns(models);
@@ -1412,15 +1539,11 @@ public class TableQueryManagerImplTest {
 	public void testQueryBundleFacets() throws Exception{
 		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
 		setupNonExclusiveLock();
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long)models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
 		when(mockTableConnectionFactory.getConnection(idAndVersion)).thenReturn(mockTableIndexDAO);
-		IndexDescription indexDescription = new TableIndexDescription(idAndVersion);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
-		
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
-		
+
 		when(mockQueryCacheManager.getQueryResults(any(), any())).thenReturn(enumerationFacetResults, rangeFacetResults, enumerationFacetResults);
 
 		Query query = new Query();
@@ -1451,7 +1574,11 @@ public class TableQueryManagerImplTest {
 	}
 	
 	@Test
-	public void testQueryBundleSumFileSizes() throws LockUnavilableException, TableUnavailableException, TableFailedException {
+	public void testQueryBundleSumFileSizes() throws Exception {
+		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
+		setupNonExclusiveLock();
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
 		QueryBundleRequest queryBundle = new QueryBundleRequest();
 		Query query = new Query();
@@ -1513,14 +1640,10 @@ public class TableQueryManagerImplTest {
 	
 	@Test
 	public void testQueryPreflightSelectStar() throws Exception {
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long)models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
-		IndexDescription indexDescription = new TableIndexDescription(idAndVersion);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
-		
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
-	
+
 		List<SortItem> sortList= null;
 		Query query = new Query();
 		query.setSql("select * from "+tableId);
@@ -1538,13 +1661,10 @@ public class TableQueryManagerImplTest {
 	
 	@Test
 	public void testQueryPreflightOverrideSort() throws Exception {
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long)models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
-		IndexDescription indexDescription = new TableIndexDescription(idAndVersion);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
-		
+
 		SortItem sort = new SortItem();
 		sort.setColumn("i0");
 		sort.setDirection(SortDirection.DESC);
@@ -1561,12 +1681,9 @@ public class TableQueryManagerImplTest {
 
 	@Test
 	public void testQueryPreflight_AdditionalQueryFilters() throws Exception {
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long)models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
-		IndexDescription indexDescription = new TableIndexDescription(idAndVersion);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
 
 		Query query = new Query();
 		query.setSql("select i2, i0 from "+tableId);
@@ -1588,13 +1705,9 @@ public class TableQueryManagerImplTest {
 	
 	@Test
 	public void testQueryPreflight_AdditionalQueryFiltersWithHasLike() throws Exception {
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long)models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
-		IndexDescription indexDescription = new TableIndexDescription(idAndVersion);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
-		
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
 
 		Query query = new Query();
 		query.setSql("select i2, i0 from "+tableId);
@@ -1619,12 +1732,9 @@ public class TableQueryManagerImplTest {
 	@Test
 	public void testQueryPreflight_AdditionalQueryFiltersWithHas() throws Exception {
 
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long) models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
-		IndexDescription indexDescription = new TableIndexDescription(idAndVersion);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
 
 		Query query = new Query();
 		query.setSql("select i2, i0 from " + tableId);
@@ -1642,15 +1752,16 @@ public class TableQueryManagerImplTest {
 		assertNotNull(result);
 		assertEquals("SELECT _C2_, _C0_, ROW_ID, ROW_VERSION FROM T123 WHERE ( ( JSON_OVERLAPS(LOWER(_C13_),LOWER(JSON_ARRAY(:b0,:b1))) IS TRUE ) )",
 				result.getMainQuery().getTranslator().getOutputSQL());
-		verify(mockTableManagerSupport).validateTableReadAccess(user, indexDescription);
+		verify(mockTableManagerSupport).validateTableReadAccess(user, new SnapshotIndexDescription(idAndVersion,
+				TableType.table, Collections.emptyList(), Collections.emptyList(), id -> Optional.empty()));
 		assertEquals("bar", result.getMainQuery().getTranslator().getParameters().get("b0"));
 		assertEquals("foo%", result.getMainQuery().getTranslator().getParameters().get("b1"));
 	}
 	
 	@Test
 	public void testQueryPreflightEmptySchema() throws Exception {
-		// Return no columns
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn(0L);
+		// An as-built snapshot with no columns yields an empty schema.
+		setupSnapshot(idAndVersion, TableType.table, Collections.emptyList());
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
 		Query query = new Query();
 		query.setSql("select * from "+tableId);
@@ -1678,16 +1789,12 @@ public class TableQueryManagerImplTest {
 	public void testRunQueryDownloadAsStreamDownload() throws Exception{
 		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
 		setupNonExclusiveLock();
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long)models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
 		when(mockTableConnectionFactory.getConnection(idAndVersion)).thenReturn(mockTableIndexDAO);
-		IndexDescription indexDescription = new TableIndexDescription(idAndVersion);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
 		setupQueryCallback();
-		
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
-		
+
 		DownloadFromTableRequest request = new DownloadFromTableRequest();
 		request.setSql("select * from "+tableId);
 		request.setSort(null);
@@ -1698,8 +1805,9 @@ public class TableQueryManagerImplTest {
 		DownloadFromTableResult results = manager.runQueryDownloadAsCSV(
 				mockProgressCallbackVoid, user, request, writer);
 		assertNotNull(results);
-		
-		verify(mockTableManagerSupport).validateTableReadAccess(user, indexDescription);
+
+		verify(mockTableManagerSupport).validateTableReadAccess(user, new SnapshotIndexDescription(idAndVersion,
+				TableType.table, Collections.emptyList(), Collections.emptyList(), id -> Optional.empty()));
 		assertEquals(11, writtenLines.size());
 	}
 	
@@ -1707,16 +1815,12 @@ public class TableQueryManagerImplTest {
 	public void testRunQueryDownloadAsStreamDownloadDefaultValues() throws Exception{
 		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
 		setupNonExclusiveLock();
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long)models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
 		when(mockTableConnectionFactory.getConnection(idAndVersion)).thenReturn(mockTableIndexDAO);
-		IndexDescription indexDescription = new TableIndexDescription(idAndVersion);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
 		setupQueryCallback();
-		
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
-		
+
 		DownloadFromTableRequest request = new DownloadFromTableRequest();
 		request.setSql("select i0 from "+tableId);
 		request.setSort(null);
@@ -1743,17 +1847,16 @@ public class TableQueryManagerImplTest {
 	public void testRunQueryDownloadAsStreamDownloadViewIncludeEtag() throws Exception{
 		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
 		setupNonExclusiveLock();
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long)models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
+		setupSnapshot(idAndVersion, TableType.entityview, models,
+				List.of(new BenefactorColumn().setBenefactorColumnName(TableConstants.ROW_BENEFACTOR)
+						.setBenefactorType(ObjectType.ENTITY.name())),
+				Collections.emptyList());
+		setupColumnModelAnswer(models);
 		when(mockTableConnectionFactory.getConnection(idAndVersion)).thenReturn(mockTableIndexDAO);
 		when(mockTableIndexDAO.getDistinctLongValues(idAndVersion, TableConstants.ROW_BENEFACTOR)).thenReturn(benfactors);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(new TableIndexDescription(idAndVersion));
+		when(mockTableManagerSupport.getAccessibleBenefactors(any(), any(), any())).thenReturn(subSet);
 		setupQueryCallback();
-		
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
-		
-		IndexDescription indexDescription = new ViewIndexDescription(idAndVersion, TableType.entityview, -1L);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
+
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
 		DownloadFromTableRequest request = new DownloadFromTableRequest();
 		request.setSql("select i0 from "+tableId);
@@ -1782,16 +1885,11 @@ public class TableQueryManagerImplTest {
 	public void testRunQueryDownloadAsStreamDownloadTableIncludeEtag() throws Exception{
 		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
 		setupNonExclusiveLock();
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long)models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
 		when(mockTableConnectionFactory.getConnection(idAndVersion)).thenReturn(mockTableIndexDAO);
-		
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
-
 		setupQueryCallback();
-		
-		IndexDescription indexDescription = new TableIndexDescription(idAndVersion);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
+
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
 		DownloadFromTableRequest request = new DownloadFromTableRequest();
 		request.setSql("select i0 from "+tableId);
@@ -1820,16 +1918,12 @@ public class TableQueryManagerImplTest {
 	public void testRunQueryDownloadAsStreamDownloadIncludeEtagWithoutRowId() throws Exception {
 		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
 		setupNonExclusiveLock();
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long)models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
 		when(mockTableConnectionFactory.getConnection(idAndVersion)).thenReturn(mockTableIndexDAO);
-		IndexDescription indexDescription = new TableIndexDescription(idAndVersion);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
 		setupQueryCallback();
-		
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
-		
+
 		DownloadFromTableRequest request = new DownloadFromTableRequest();
 		request.setSql("select i0 from "+tableId);
 		request.setSort(null);
@@ -1876,9 +1970,11 @@ public class TableQueryManagerImplTest {
 	}
 	
 	@Test
-	public void testRunQueryDownloadAsStreamEmptyDownload() throws NotFoundException, TableUnavailableException, TableFailedException, LockUnavilableException {
-		// Return no columns
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn(0L);
+	public void testRunQueryDownloadAsStreamEmptyDownload() throws Exception {
+		// An as-built snapshot with no columns yields an empty schema.
+		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
+		setupNonExclusiveLock();
+		setupSnapshot(idAndVersion, TableType.table, Collections.emptyList());
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
 		DownloadFromTableRequest request = new DownloadFromTableRequest();
 		request.setSql("select * from "+tableId);
@@ -2127,13 +2223,10 @@ public class TableQueryManagerImplTest {
 	public void testQuerySinglePageWithNextPage() throws Exception{
 		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
 		setupNonExclusiveLock();
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long)models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
 		when(mockTableConnectionFactory.getConnection(idAndVersion)).thenReturn(mockTableIndexDAO);
-		IndexDescription indexDescription = new TableIndexDescription(idAndVersion);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);		
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
 		when(mockQueryCacheManager.getQueryResults(any(), any())).thenReturn(countRowSet);
 		
 		// setup the results to return one row.
@@ -2173,6 +2266,10 @@ public class TableQueryManagerImplTest {
 		rows.add(row);
 		// no options
 		queryOptions = new QueryOptions();
+		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
+		setupNonExclusiveLock();
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
 		Query query = new Query();
 		query.setSql("select * from "+tableId);
@@ -2192,6 +2289,13 @@ public class TableQueryManagerImplTest {
 	
 	@Test
 	public void testQuerySinglePageWithNoNextPage() throws Exception{
+		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
+		setupNonExclusiveLock();
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
+		when(mockTableConnectionFactory.getConnection(idAndVersion)).thenReturn(mockTableIndexDAO);
+		when(mockTableIndexDAO.query(any())).thenReturn(new RowSet().setRows(rows));
+		when(mockQueryCacheManager.getQueryResults(any(), any())).thenReturn(countRowSet);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
 		queryOptions = new QueryOptions().withRunQuery(true).withRunCount(true).withReturnFacets(false);
 		Query query = new Query();
@@ -2215,14 +2319,11 @@ public class TableQueryManagerImplTest {
 	public void testQuerySinglePageWithEtag() throws Exception {
 		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
 		setupNonExclusiveLock();
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long)models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
 		when(mockTableConnectionFactory.getConnection(idAndVersion)).thenReturn(mockTableIndexDAO);
-		IndexDescription indexDescription = new TableIndexDescription(idAndVersion);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
-		
+
 		addRowIdAndVersionToRows();
 		convertRowsToEntityRows();
 		
@@ -2247,6 +2348,13 @@ public class TableQueryManagerImplTest {
 	
 	@Test
 	public void testQuerySinglePageRunQueryTrue() throws Exception{
+		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
+		setupNonExclusiveLock();
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
+		when(mockTableConnectionFactory.getConnection(idAndVersion)).thenReturn(mockTableIndexDAO);
+		when(mockTableIndexDAO.query(any())).thenReturn(new RowSet().setRows(rows));
+		when(mockQueryCacheManager.getQueryResults(any(), any())).thenReturn(countRowSet);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
 		queryOptions = new QueryOptions().withRunQuery(true).withRunCount(true).withReturnFacets(false);
 		Query query = new Query();
@@ -2268,6 +2376,11 @@ public class TableQueryManagerImplTest {
 	
 	@Test
 	public void testQuerySinglePageRunQueryFalse() throws Exception{
+		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
+		setupNonExclusiveLock();
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
+		when(mockQueryCacheManager.getQueryResults(any(), any())).thenReturn(countRowSet);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
 		queryOptions = new QueryOptions().withRunQuery(false).withRunCount(true).withReturnFacets(false);
 		Query query = new Query();
@@ -2291,15 +2404,11 @@ public class TableQueryManagerImplTest {
 	public void testQuerySinglePageOverrideLimit() throws Exception{
 		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
 		setupNonExclusiveLock();
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long)models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
 		when(mockTableConnectionFactory.getConnection(idAndVersion)).thenReturn(mockTableIndexDAO);
-		IndexDescription indexDescription = new TableIndexDescription(idAndVersion);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
-		
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
-		
+
 		ArgumentCaptor<CachedQueryRequest> countQuery = ArgumentCaptor.forClass(CachedQueryRequest.class);
 		
 		when(mockQueryCacheManager.getQueryResults(any(), countQuery.capture())).thenReturn(countRowSet);
@@ -2329,15 +2438,11 @@ public class TableQueryManagerImplTest {
 	public void testQuerySinglePageWithLimit() throws Exception{
 		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
 		setupNonExclusiveLock();
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long)models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
+		setupSnapshot(idAndVersion, TableType.table, models);
+		setupColumnModelAnswer(models);
 		when(mockTableConnectionFactory.getConnection(idAndVersion)).thenReturn(mockTableIndexDAO);
-		IndexDescription indexDescription = new TableIndexDescription(idAndVersion);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
-		
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
-		
+
 		when(mockQueryCacheManager.getQueryResults(any(), any())).thenReturn(countRowSet);
 		
 		queryOptions = new QueryOptions().withRunQuery(false).withRunCount(true).withReturnFacets(false);
@@ -2535,63 +2640,45 @@ public class TableQueryManagerImplTest {
 	@Test
 	public void testAddRowLevelFilterEmpty() throws Exception {
 		when(mockTableConnectionFactory.getConnection(idAndVersion)).thenReturn(mockTableIndexDAO);
-		when(mockTableIndexDAO.getDistinctLongValues(idAndVersion, TableConstants.ROW_BENEFACTOR)).thenReturn(benfactors);
 		IndexDescription indexDescription = new ViewIndexDescription(idAndVersion, TableType.entityview, -1L);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
 		QuerySpecification query = new TableQueryParser("select i0 from "+tableId).querySpecification();
 		//return empty benefactors
 		when(mockTableIndexDAO.getDistinctLongValues(idAndVersion, TableConstants.ROW_BENEFACTOR)).thenReturn(new HashSet<Long>());
 		// call under test
-		manager.addRowLevelFilter(user, query);
+		manager.addRowLevelFilter(user, query, indexDescription);
 		assertEquals("SELECT i0 FROM syn123 WHERE ROW_BENEFACTOR IN ( -1 )", query.toSql());
-		verify(mockTableManagerSupport).getIndexDescription(idAndVersion);
-	}
-	
-	@Test
-	public void testAddRowLevelFilterWithJoin() throws Exception {
-		QuerySpecification query = new TableQueryParser("select * from syn123 join syn456").querySpecification();
-		String message = assertThrows(IllegalArgumentException.class, ()->{
-			// call under test
-			manager.addRowLevelFilter(user, query);
-		}).getMessage();
-		assertEquals(TableConstants.JOIN_NOT_SUPPORTED_IN_THIS_CONTEX_MESSAGE, message);
 	}
 
 	@Test
 	public void getAddRowLevelFilterTableDoesNotExist() throws Exception {
 		when(mockTableConnectionFactory.getConnection(idAndVersion)).thenReturn(mockTableIndexDAO);
-		when(mockTableIndexDAO.getDistinctLongValues(idAndVersion, TableConstants.ROW_BENEFACTOR)).thenReturn(benfactors);
-		
+
 		QuerySpecification query = new TableQueryParser("select i0 from "+tableId).querySpecification();
 		//return empty benefactors
 		when(mockTableIndexDAO.getDistinctLongValues(idAndVersion, TableConstants.ROW_BENEFACTOR)).thenThrow(BadSqlGrammarException.class);
 		IndexDescription indexDescription = new ViewIndexDescription(idAndVersion, TableType.entityview, -1L);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
-		
+
 		// call under test
-		manager.addRowLevelFilter(user, query);
+		manager.addRowLevelFilter(user, query, indexDescription);
 
 		//Throw table not existing should be treated same as not having benefactors.
 		assertEquals("SELECT i0 FROM syn123 WHERE ROW_BENEFACTOR IN ( -1 )", query.toSql());
-		verify(mockTableManagerSupport).getIndexDescription(idAndVersion);
 	}
-	
+
 	@Test
 	public void testAddRowLevelFilter() throws Exception {
 		when(mockTableConnectionFactory.getConnection(any())).thenReturn(mockTableIndexDAO);
 		when(mockTableIndexDAO.getDistinctLongValues(any(), any())).thenReturn(benfactors);
 		when(mockTableManagerSupport.getAccessibleBenefactors(any(), any(), any())).thenReturn(subSet);
 		IndexDescription indexDescription = new ViewIndexDescription(idAndVersion, TableType.entityview, -1L);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
-		
+
 		QuerySpecification query = new TableQueryParser("select i0 from "+tableId).querySpecification();
 		// call under test
-		manager.addRowLevelFilter(user, query);
+		manager.addRowLevelFilter(user, query, indexDescription);
 
 		assertEquals("SELECT i0 FROM syn123 WHERE ROW_BENEFACTOR IN ( -1, 444 )", query.toSql());
 		verify(mockTableIndexDAO).getDistinctLongValues(idAndVersion, TableConstants.ROW_BENEFACTOR);
 		verify(mockTableManagerSupport).getAccessibleBenefactors(user, ObjectType.ENTITY, benfactors);
-		verify(mockTableManagerSupport).getIndexDescription(idAndVersion);
 	}
 	
 	public void setupLookup(IndexDescription...all){
@@ -2613,21 +2700,19 @@ public class TableQueryManagerImplTest {
 				new ViewIndexDescription(viewTwoId, TableType.entityview, -1L));
 		IndexDescription indexDescription = new MaterializedViewIndexDescription(idAndVersion,
 				"select * from syn1 a join syn2 on (a.id=b.id)", mockTableManagerSupport);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
 
 		QuerySpecification query = new TableQueryParser("select * from "+tableId).querySpecification();
 		// call under test
-		manager.addRowLevelFilter(user, query);
+		manager.addRowLevelFilter(user, query, indexDescription);
 
 		assertEquals("SELECT * FROM syn123 WHERE ( ROW_BENEFACTOR__A0 IN ( -1, 444 ) ) AND ROW_BENEFACTOR__A1 IN ( -1, 111 )", query.toSql());
 		verify(mockTableIndexDAO).getDistinctLongValues(idAndVersion, "ROW_BENEFACTOR__A0");
 		verify(mockTableIndexDAO).getDistinctLongValues(idAndVersion, "ROW_BENEFACTOR__A1");
 		verify(mockTableIndexDAO, times(2)).getDistinctLongValues(any(), any());
-		
+
 		verify(mockTableManagerSupport).getAccessibleBenefactors(user, ObjectType.ENTITY, oneBenefactors);
 		verify(mockTableManagerSupport).getAccessibleBenefactors(user, ObjectType.ENTITY, twoBenefactors);
 		verify(mockTableManagerSupport, times(2)).getAccessibleBenefactors(any(), any(), any());
-		verify(mockTableManagerSupport).getIndexDescription(idAndVersion);
 	}
 	
 	@Test
@@ -2643,36 +2728,32 @@ public class TableQueryManagerImplTest {
 		setupLookup(new ViewIndexDescription(viewOneId, TableType.entityview, -1L));
 		IndexDescription indexDescription = new MaterializedViewIndexDescription(idAndVersion,
 				"select * from syn1 a join syn1 on (a.id=b.id)", mockTableManagerSupport);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
 
 		QuerySpecification query = new TableQueryParser("select * from "+tableId).querySpecification();
 		// call under test
-		manager.addRowLevelFilter(user, query);
+		manager.addRowLevelFilter(user, query, indexDescription);
 
 		assertEquals("SELECT * FROM syn123 WHERE ( ROW_BENEFACTOR__A0 IN ( -1, 444 ) ) AND ROW_BENEFACTOR__A1 IN ( -1, 111 )", query.toSql());
 		verify(mockTableIndexDAO).getDistinctLongValues(idAndVersion, "ROW_BENEFACTOR__A0");
 		verify(mockTableIndexDAO).getDistinctLongValues(idAndVersion, "ROW_BENEFACTOR__A1");
 		verify(mockTableIndexDAO, times(2)).getDistinctLongValues(any(), any());
-		
+
 		verify(mockTableManagerSupport).getAccessibleBenefactors(user, ObjectType.ENTITY, oneBenefactors);
 		verify(mockTableManagerSupport).getAccessibleBenefactors(user, ObjectType.ENTITY, twoBenefactors);
 		verify(mockTableManagerSupport, times(2)).getAccessibleBenefactors(any(), any(), any());
-		verify(mockTableManagerSupport).getIndexDescription(idAndVersion);
 	}
 	
 	@Test
 	public void testAddRowLevelFilterWithTable() throws Exception {
 		IndexDescription indexDescription = new TableIndexDescription(idAndVersion);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
-		
+
 		QuerySpecification query = new TableQueryParser("select i0 from "+tableId).querySpecification();
 		// call under test
-		manager.addRowLevelFilter(user, query);
+		manager.addRowLevelFilter(user, query, indexDescription);
 
 		assertEquals("SELECT i0 FROM syn123", query.toSql());
 		verify(mockTableIndexDAO, never()).getDistinctLongValues(any(), any());
 		verify(mockTableManagerSupport, never()).getAccessibleBenefactors(any(), any(), any());
-		verify(mockTableManagerSupport).getIndexDescription(idAndVersion);
 	}
 	
 	
@@ -2952,14 +3033,20 @@ public class TableQueryManagerImplTest {
 		queryOptions = new QueryOptions().withRunQuery(true).withReturnSelectColumns(true).withRunCount(false)
 				.withReturnFacets(false);
 		Query request = new Query().setSql("select * from " + idAndVersion.toString());
-		doReturn(mockQueryTranslations).when(manager).queryPreflight(user, request, null, queryOptions);
 
 		when(mockRowHandlerProvider.getHandler(mockQueryTranslations)).thenReturn(mockRowHandler);
-		StreamingQueryExecutor executor = new StreamingQueryExecutor(mockRowHandler);
-
 		QueryResultBundle expected = new QueryResultBundle().setQueryCount(1L);
-		doReturn(expected).when(manager).queryAfterAuthorization(mockProgressCallbackVoid, user, mockQueryTranslations,
-				queryOptions, executor);
+		// executeQuery is covered separately; here we only verify runQueryAsStream opens the handler under
+		// the lock, runs the translated query against it, and closes the handler.
+		doReturn(expected).when(manager).executeQuery(eq(user), eq(mockQueryTranslations), eq(queryOptions),
+				any(StreamingQueryExecutor.class));
+		// queryAfterAuthorization runs its consumer under the read lock; invoke it here with the query the
+		// preflight would have translated so the streaming consumer executes.
+		doAnswer(invocation -> {
+			TableQueryManagerImpl.TranslatedQueryConsumer consumer = invocation.getArgument(5);
+			return consumer.apply(mockQueryTranslations, status);
+		}).when(manager).queryAfterAuthorization(eq(mockProgressCallbackVoid), eq(user), eq(request), isNull(),
+				eq(queryOptions), any(TableQueryManagerImpl.TranslatedQueryConsumer.class));
 
 		// call under test
 		QueryResultBundle results = manager.runQueryAsStream(mockProgressCallbackVoid, user, request,
@@ -2968,14 +3055,17 @@ public class TableQueryManagerImplTest {
 
 		verify(mockRowHandler).close();
 	}
-	
+
 	@Test
 	public void testRunQueryAsStreamWithEmptyException() throws Exception {
 		queryOptions = new QueryOptions().withRunQuery(true).withReturnSelectColumns(true).withRunCount(false)
 				.withReturnFacets(false);
 		Query request = new Query().setSql("select * from " + idAndVersion.toString());
-		doThrow(new EmptyResultException("message", "syn123")).when(manager).queryPreflight(user, request, null,
-				queryOptions);
+		// The empty-schema check runs inside queryPreflight, under the lock, so it surfaces out of
+		// queryAfterAuthorization; runQueryAsStream maps it to an IllegalArgumentException.
+		doThrow(new EmptyResultException("message", "syn123")).when(manager).queryAfterAuthorization(
+				eq(mockProgressCallbackVoid), eq(user), eq(request), isNull(), eq(queryOptions),
+				any(TableQueryManagerImpl.TranslatedQueryConsumer.class));
 
 		String message = assertThrows(IllegalArgumentException.class, () -> {
 			// call under test
@@ -3082,15 +3172,15 @@ public class TableQueryManagerImplTest {
 
 	@Test
 	public void testQuerySinglePageWithViewReturnsBenefactorId() throws Exception {
-		IndexDescription indexDescription = new ViewIndexDescription(idAndVersion, TableType.entityview, -1L);
 		when(mockTableManagerSupport.getTableStatusOrCreateIfNotExists(idAndVersion)).thenReturn(status);
 		setupNonExclusiveLock();
-		when(mockTableManagerSupport.getTableSchemaCount(any())).thenReturn((long) models.size());
-		when(mockTableManagerSupport.getTableSchema(idAndVersion)).thenReturn(models);
+		setupSnapshot(idAndVersion, TableType.entityview, models,
+				List.of(new BenefactorColumn().setBenefactorColumnName(TableConstants.ROW_BENEFACTOR)
+						.setBenefactorType(ObjectType.ENTITY.name())),
+				Collections.emptyList());
+		setupColumnModelAnswer(models);
 		when(mockTableConnectionFactory.getConnection(idAndVersion)).thenReturn(mockTableIndexDAO);
-		when(mockTableManagerSupport.getIndexDescription(any())).thenReturn(indexDescription);
 		when(mockTableManagerSupport.validateTableReadAccess(any(), any())).thenReturn(AuthorizationStatus.authorized());
-		when(mockTableManagerSupport.getColumnModel(any())).thenReturn(models.get(0));
 		when(mockTableIndexDAO.getDistinctLongValues(any(), any())).thenReturn(benfactors);
 		when(mockTableManagerSupport.getAccessibleBenefactors(any(), any(), any())).thenReturn(subSet);
 
